--- a/min/style.css
+++ b/min/style.css
@@ -2,12 +2,21 @@ canvas {
     display: block;
 }
 
+#no-margin-canvas {
+    margin: 0; /* Remove the margin for the specific canvas */
+}
+
+
+#container2 {
+    /* background-color: aqua;  */
+    margin: 0;
+}
+
 #container {
     /* background-color: aqua;  */
     display: inline-block;
     margin: auto;
 }
-
 
 
  #container canvas {
@@ -17,7 +26,7 @@ canvas {
 }
 
 .wrap {
-    margin: auto;
+    margin: auto;   
     width: 1200px;
 
 }
